--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@ FROM       ubuntu:%VERSION%
 MAINTAINER Baba Orhum "https://github.com/Elrondo46"
 
 RUN apt update
-RUN apt dist-upgrade
+RUN apt -y  dist-upgrade
 RUN apt install -y openssh-server ffmpeg
 RUN mkdir /var/run/sshd
 
